fix: ad-table> column :{ align: 'right'} 样式修复

--- a/style/adber/table.scss
+++ b/style/adber/table.scss
@@ -155,6 +155,11 @@
     th {
       height: 41px;
       background: #F6FAFF;
+      &.is-right {
+        .cell {
+          justify-content: end;
+        }
+      }
       .cell {
         //font-size: 13px;
         font-weight: normal;
